# s22_savethechildren

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  conda_reqs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: workflow.yml
conf/: credentials.yaml
docs/: Makefile  api.rst  api_summary.rst  bibliography.rst  conf.py  data.rst  devinfo.rst  dl_steps.rst  getting-started.rst  index.rst  make.bat  methodology.rst  reproducing.rst  requirements.txt  results.rst  stc_conda.yaml  tmp_dl.rst
models/: autoencoder_nga.h5  autoencoder_nigeria_res7.h5  autoencoder_sen_norm.h5  autoencoder_senegal_res7.h5
notebooks/: Autoencoder.ipynb  GeotiffToHex.ipynb  JF_baseline.ipynb  data_cleaning_v2.ipynb  model_sandbox.ipynb  prediction_intervals.ipynb
src/data/: make_dataset.py  make_gee_dataset.py  map.html  process_geotiff.py  test_gee_data_download.js  worldpop_data_info.json
src/stc_unicef_cpi/data/: commuting.py  cv_loaders.py  get_cell_tower_data.py  get_drive_data.py  get_econ_data.py  get_facebook_data.py  get_osm_data.py  get_satellite_data.py  get_speedtest_data.py  make_countries.sh  make_dataset.py  make_gee_dataset.py  process_geotiff.py  process_netcdf.py  process_to_torch.py  stream_data.py  test_gee_data_download.js
src/stc_unicef_cpi/features/: autoencoder_features.py  build_features.py  get_autoencoder_features.py  resnet_pca.py
src/stc_unicef_cpi/models/: clean_params.txt  inflated_vals_2stg.py  lgbm_baseline.py  mobnet_TL.py  model_training.sh  predict_countries.sh  predict_model.py  (+4 more)
(+4 files in other folders)
