[metadata]
name = stc_unicef_cpi
version = 0.0.1
description = Python package to produce high-resolution multi-dimensional child poverty maps for Save the Children and UNICEF.
; long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
; keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

; install_requires =
;     requests
;     importlib-metadata; python_version<"3.8"

; [options.entry_points]
; console_scripts =
;     executable-name = stc_unicef_cpi.module:function
